--- a/0 INTRODUCCION/0.1. Operaciones basicas.ipynb
+++ b/0 INTRODUCCION/0.1. Operaciones basicas.ipynb
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -175,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -204,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -262,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -322,7 +322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -354,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -383,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -412,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -443,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -472,7 +472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -501,7 +501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -531,7 +531,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -560,7 +560,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -586,7 +586,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -612,7 +612,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -643,7 +643,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -673,7 +673,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -703,7 +703,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -732,7 +732,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -763,7 +763,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -792,7 +792,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -821,7 +821,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -850,7 +850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -879,7 +879,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -908,7 +908,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -945,7 +945,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -960,7 +960,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1025,13 +1025,12 @@
         "    x += y\n",
         "    y = aux\n",
         "    i += 1\n",
-        "  return x\n",
-        ""
+        "  return x\n"
       ],
       "metadata": {
         "id": "NiGmVJ8GVk2k"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1049,7 +1048,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1075,7 +1074,7 @@
       "metadata": {
         "id": "sEys782MWfEN"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
