--- a/0 INTRODUCCION/0.2. Estructuras de control.ipynb
+++ b/0 INTRODUCCION/0.2. Estructuras de control.ipynb
@@ -7,23 +7,26 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/carlosemiliorabazo/APRENDIZAJE_AUTOMATICO_23_24/blob/main/0%20INTRODUCCION/0.2.%20Estructuras%20de%20control.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/GallardoCarmen/APRENDIZAJE_AUTOMATICO_23_24/blob/main/0%20INTRODUCCION/0.2.%20Estructuras%20de%20control.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
         },
         "id": "ernuRavfc8K-",
-        "outputId": "f0350451-d249-469f-d719-f8e508be7381"
+        "outputId": "13435e70-a5cf-4f03-b9e7-ac56e8d7a590",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "x es menor\n"
           ]
@@ -38,18 +41,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
         },
         "id": "lfkx5-6Kc8K_",
-        "outputId": "c193358a-3e63-4e60-91a5-83b92c2460e7"
+        "outputId": "260cd2ff-c4f0-4d71-aa4b-2dae7c0096e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "x es mayor\n"
           ]
@@ -66,18 +72,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
         },
         "id": "rG42yjWgc8K_",
-        "outputId": "d2178fc2-9822-432a-aa7b-03b8b7209f1e"
+        "outputId": "6aa629d5-e6fa-48aa-b1b8-27dd6294f0e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "son iguales\n"
           ]
@@ -96,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -116,18 +125,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
         },
         "id": "web7vFGPc8K_",
-        "outputId": "2e04cbf7-6e7c-441c-cdbe-b79058844ef9"
+        "outputId": "52b58504-2f39-4624-9ec1-e9dc936768d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "x es menor\n"
           ]
@@ -139,18 +151,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
         },
         "id": "puA-G13tc8LA",
-        "outputId": "4ab6d324-6a07-4dfd-c610-23dfa80ab349"
+        "outputId": "ebc65e29-f141-47c2-975a-ed5e639c544e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "x es mayor\n"
           ]
@@ -162,18 +177,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
         },
         "id": "piVDflM8c8LA",
-        "outputId": "3b443cff-2e17-423d-ab2a-39cbb6cefac0"
+        "outputId": "c43ff420-c953-44b3-a766-a86e9f6f6073",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "0\n",
             "1\n",
@@ -198,18 +216,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
         },
         "id": "EWrW3hV2c8LA",
-        "outputId": "a5ab4aa6-d52e-4571-9759-10f9e95a1d30"
+        "outputId": "e2681ca5-f33d-4255-dcf0-3de80631ee00",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "0\n",
             "1\n",
@@ -231,18 +252,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
         },
         "id": "GkU5qAp6c8LA",
-        "outputId": "3f24cbd3-b867-4717-b6ef-39dd2725f8cf"
+        "outputId": "7c7a15af-203e-4638-af79-24b85c17330f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "i\n",
             "P\n",
@@ -250,29 +274,33 @@
             "t\n",
             "h\n",
             "o\n",
-            "n\n"
+            "n\n",
+            "2\n"
           ]
         }
       ],
       "source": [
-        "for i in \"iPython\":\n",
+        "for i in \"iPython2\":\n",
         "    print (i)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
         },
         "id": "mx7hAypdc8LA",
-        "outputId": "920e644b-d377-41c6-b9ad-39fbc758ef83"
+        "outputId": "b14f44c4-d5a8-4917-e88f-dea6bf2d8557",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Curso\n",
             "de\n",
@@ -287,18 +315,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
         },
         "id": "vdYTOZJrc8LA",
-        "outputId": "b2edc917-5857-4d5a-d397-1f35fb1bd4c7"
+        "outputId": "bd1c2623-2f36-4b47-f36e-bbabc9281d4c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "0\n",
             "1\n",
@@ -317,18 +348,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
         },
         "id": "JP9mR6-sc8LA",
-        "outputId": "a75df3fc-f17d-42ce-a074-726b6bc103e5"
+        "outputId": "a1ae930e-7116-4302-e6bc-4ee11ad4d382",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "1 es impar\n",
             "2 es par\n",
@@ -376,18 +410,34 @@
       "source": [
         "def invertir_lista(lista):\n",
         "  # PROGRAMAR AQUÍ EL CÓDIGO DE LA FUNCIÓN\n",
-        "\n",
+        "  listaInv = []\n",
+        "  for i in range(len(lista),0,-1):\n",
+        "    listaInv.append(lista[i-1])\n",
+        "  return listaInv\n",
         "# Pruebas\n",
+        "print(invertir_lista([1, 2, 3]))\n",
         "assert invertir_lista([1, 2, 3]) == [3, 2, 1]\n",
         "assert invertir_lista([\"a\", \"b\", \"c\"]) == [\"c\", \"b\", \"a\"]\n",
         "assert invertir_lista([]) == []\n",
         "assert invertir_lista([1]) == [1]"
       ],
       "metadata": {
-        "id": "RLk0hOVfdgXQ"
+        "id": "RLk0hOVfdgXQ",
+        "outputId": "99b73a6b-2509-4015-8d3c-d0b8c3efcf5b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[3, 2, 1]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -403,7 +453,11 @@
       "source": [
         "def contar_ocurrencias(lista, elemento):\n",
         "  # PROGRAMAR AQUÍ EL CÓDIGO DE LA FUNCIÓN\n",
-        "\n",
+        "  contador = 0\n",
+        "  for i in range(0,len(lista)):\n",
+        "    if lista[i] == elemento:\n",
+        "      contador += 1\n",
+        "  return contador\n",
         "# Pruebas\n",
         "assert contar_ocurrencias([1, 2, 3, 4, 1, 2, 1], 1) == 3\n",
         "assert contar_ocurrencias([\"a\", \"b\", \"a\"], \"a\") == 2\n",
@@ -413,7 +467,7 @@
       "metadata": {
         "id": "BYKPPL92eCT6"
       },
-      "execution_count": 2,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -430,7 +484,11 @@
       "source": [
         "def es_palindromo(cadena):\n",
         "  # PROGRAMAR AQUÍ EL CÓDIGO DE LA FUNCIÓN\n",
-        "\n",
+        "  cadena = cadena.lower()\n",
+        "  cadenaInv = \"\"\n",
+        "  for letra in cadena:\n",
+        "    cadenaInv = letra + cadenaInv\n",
+        "  return cadenaInv == cadena\n",
         "# Pruebas\n",
         "assert es_palindromo(\"Anilina\") == True\n",
         "assert es_palindromo(\"Radar\") == True\n",
@@ -440,7 +498,7 @@
       "metadata": {
         "id": "Tlv5CnzKek2s"
       },
-      "execution_count": 3,
+      "execution_count": 55,
       "outputs": []
     }
   ],
