--- a/P1Grupo1.ipynb
+++ b/P1Grupo1.ipynb
@@ -34,9 +34,9 @@
         "**ENUNCIADO:**\n",
         "Crea un modelo de Red de Neuronas Artificiales que sea capaz de reconocer y clasificar imágenes de ropa en sus diferentes tipologías. Este modelo será definido, configurado, entrenado, evaluado y mejorado para posteriormente usarlo para hacer predicciones.\n",
         "\n",
-        "En esta práctica se tratan los principios fundamentales de las redes neuronales artificiales utilizando un modelo de aprendizaje profundo para abordar un problema real: el reconocimiento y clasificación de imágenes de ropa. Usando la biblioteca Keras, hemos definido, configurado y entrenado un modelo de red neuronal artificial para realizar esta tarea de clasificación.\n",
+        "En esta práctica se tratan los principios fundamentales de las redes neuronales artificiales utilizando un modelo de aprendizaje profundo para abordar un problema real: el reconocimiento y la clasificación de imágenes de ropa. Usando la biblioteca Keras, hemos definido, configurado y entrenado un modelo de red neuronal artificial para realizar esta tarea de clasificación.\n",
         "\n",
-        "A lo largo de la práctica, se han abordado cuestiones como la preparación de datos, la normalización de imágenes, la construcción del modelo, la elección de funciones de activación, optimizadores y funciones de pérdida, así como la evaluación del modelo. También exploramos técnicas de visualización para comprender mejor cómo se comporta nuestra red neuronal y cómo se desempeña en la clasificación de imágenes.\n",
+        "A lo largo de la práctica, se han abordado cuestiones como la preparación de datos, la normalización de imágenes, la construcción del modelo, la elección de funciones de activación, optimizadores y funciones de pérdida, así como la evaluación del modelo. También exploramos técnicas de visualización para comprender mejor como se comporta nuestra red neuronal y como se desempeña en la clasificación de imágenes.\n",
         "\n",
         "Respecto a la organización de la práctica, todos los miembros del equipo han contribuido de manera equitativa al proceso. Hemos trabajado de forma colaborativa, desarrollando el código de manera conjunta, compartiendo explicaciones y distribuyendo tareas de manera equilibrada.\n",
         "\n"
@@ -97,7 +97,7 @@
         "def crear_Network (NneuronasCapa1, funcionActivacion, Optimizador, FuncionPerd):\n",
         "    network = models.Sequential()\n",
         "\n",
-        "    #Agregamos la capa Flatten (explicada en el pr-procesado de datos)\n",
+        "    #Agregamos la capa Flatten (explicada en el pre-procesado de datos)\n",
         "    network.add(layers.Flatten(input_shape=(28, 28)))\n",
         "    #Añadimos una capa densa (totalmente conectada)\n",
         "    network.add(layers.Dense(NneuronasCapa1, activation=funcionActivacion, input_shape=(28*28,)))\n",
@@ -113,7 +113,7 @@
         "    return network\n",
         "\n",
         "#función para entrenar los modelos con los datos\n",
-        "#Metemos como dato de entrada las etiquetas para poder diferenciar entre las categoricas y no categoricas(PUNTO 7)\n",
+        "#Insertamos como dato de entrada las etiquetas para poder diferenciar entre las categóricas y no categóricas(PUNTO 7)\n",
         "def entrenar(network, ep, labels):\n",
         "  network.fit(train_images, labels, epochs = ep, batch_size=128)\n",
         "  return network\n",
@@ -227,14 +227,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 1000
         },
         "id": "dGMIRM4phbIw",
-        "outputId": "55131fca-1ac6-4f26-ce65-be9c96f8cd9c"
+        "outputId": "e47461ef-16f4-44c0-e6be-65725828ec52"
       },
       "outputs": [
         {
@@ -242,8 +242,8 @@
           "name": "stdout",
           "text": [
             "Tamaño del conjunto de imagenes: \n",
-            "Imagenes de entrenamiento:  (60000, 28, 28)\n",
-            "Imagenes de test:  (10000, 28, 28)\n",
+            "Imágenes de entrenamiento:  (60000, 28, 28)\n",
+            "Imágenes de test:  (10000, 28, 28)\n",
             "Imagen número 30000: \n",
             "[[  0   0   0   0   0   0   0   0   0   0 118 204 181 175 213 199 168 197 111   0   0   0   0   0   0   0   0   0]\n",
             " [  0   0   0   0   0   0   0   0   0   0 173 225 185 179 225 158 142 227 173   0   0   0   0   0   0   0   0   0]\n",
@@ -291,8 +291,8 @@
         "(train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()\n",
         "\n",
         "print(\"Tamaño del conjunto de imagenes: \")\n",
-        "print(\"Imagenes de entrenamiento: \", train_images.shape)\n",
-        "print(\"Imagenes de test: \", test_images.shape)\n",
+        "print(\"Imágenes de entrenamiento: \", train_images.shape)\n",
+        "print(\"Imágenes de test: \", test_images.shape)\n",
         "\n",
         "#Vemos la matriz de la imagen número 30.000 (28x28)\n",
         "print(\"Imagen número 30000: \")\n",
@@ -316,18 +316,18 @@
       "source": [
         "Ahora vamos a proceder a realizar alguna transformación en los datos para optimizar el proceso. En vez de utilizar la función reshape, vamos a aprovechar la función de keras \"flatten\". Como tenemos imagenes de 28x28 píxeles, con flatten vamos a transformar esas matrices en vectores unidimensionales de 784 elementos. Lo que hace la función \"flatten\" es aplanar los datos manteniendo el mismo orden.\n",
         "\n",
-        "Por otro lado, vamos a modificar las etiquetas a tipo categorico, para que cada etiqueta sea un vector de tamaño 9, donde cada posición del 0 al 9 es la probabilidad de que esa imagen corresponda a cada una de las 9 clasificaciones. De esta manera todos vectores serán 0 con un 1 en la posición con la que equivalga la imagen (en este caso no tiene que ver con la probabilidad ya que son las etiquetas dadas, por eso son vectores binarios, pero posteriormente con las predicciones si son probabilidades). De esta manera se trabaja con one-hot encoding."
+        "Por otro lado, vamos a modificar las etiquetas a tipo categórico, para que cada etiqueta sea un vector de tamaño 9, donde cada posición del 0 al 9 es la probabilidad de que esa imagen corresponda a cada una de las 9 clasificaciones. De esta manera todos vectores serán 0 con un 1 en la posición con la que equivalga la imagen (en este caso no tiene que ver con la probabilidad ya que son las etiquetas dadas, por eso son vectores binarios, pero posteriormente con las predicciones sí son probabilidades). De esta manera se trabaja con one-hot encoding."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uaYldIvM1fy6",
-        "outputId": "0f9f535a-7ae2-47b4-dd6f-4e7c01a726ad"
+        "outputId": "f8238260-48c1-4474-84dd-25dbc4eff5af"
       },
       "outputs": [
         {
@@ -336,7 +336,7 @@
           "text": [
             "Etiquetas originales: \n",
             "[9 0 0 ... 3 0 5]\n",
-            "=Etiquetas tas la función to_categorical:\n",
+            "=Etiquetas tras la función to_categorical:\n",
             "[[0. 0. 0. ... 0. 0. 1.]\n",
             " [0. 0. 1. ... 0. 0. 0.]\n",
             " [0. 1. 0. ... 0. 0. 0.]\n",
@@ -360,7 +360,7 @@
         "# Posición 0 a 9 donde solo la 3 tiene probabilidad 1.\n",
         "# la imagen 30000 de entrenamiento es 3 (dress)\n",
         "\n",
-        "print(\"=Etiquetas tas la función to_categorical:\")\n",
+        "print(\"=Etiquetas tras la función to_categorical:\")\n",
         "print(test_labels_Cat)\n"
       ]
     },
@@ -418,7 +418,7 @@
         "\n",
         "El optimizador se encarga de disminuir la función de pérdida y de ajustar los pesos durante el entrenamiento. Vamos a utilizar dos tipos, el SGD (descenso de gradiente estocástico) y el RMSprop (Root Mean Square Propagation). SGD actualiza los parámetros del modelo con un solo ejemplo de entrenamiento a la vez, siendo eficiente y escalable. En cambio, RMSprop ajusta la tasa de aprendizaje individualmente para cada parámetro, adaptándose mejor a problemas con gradientes variables.\n",
         "\n",
-        "En el entrenamiento que se va a realizar se van a usar 5 épocas por cada modelo. Cada época es una iteración completa a través de todo el conjunto de entrenamiento. Con cada época mejora el modelo, pero, hay que tener en cuenta que puede haber un momento en el cual el sistema pueda sufrir un sobreajuste. En ese caso diremos que el sistema ha aprendido patrones erróneos y estará sesgado, al probarlo se verá que está sobre entrenado.\n"
+        "En el entrenamiento que se va a realizar se van a usar 5 épocas por cada modelo. Cada época es una iteración completa a través de todo el conjunto de entrenamiento. Con cada época mejora el modelo, pero, hay que tener en cuenta que puede haber un momento en el cual el sistema pueda sufrir un sobreajuste. En ese caso diremos que el sistema ha aprendido patrones erróneos y estará sesgado, al probarlo se verá que está sobre-entrenado.\n"
       ]
     },
     {
@@ -1452,7 +1452,7 @@
         "id": "7JKJ_1X0w4Ne"
       },
       "source": [
-        "Calculamos las prediciones de la sexta imagen con los 8 modelos y observamos que todos ellos aciertan. Cabe destacar que algunos modelos tienes peores prediciones que otros, como es el caso del tercero. También calculamos la suma de todos los elementos del vector de prediciones y observamos que es 1 en todos los casos (Esto se debe a que estamos trabajando con probabilidades)"
+        "Calculamos las prediciones de la sexta imagen con los 8 modelos y observamos que todos ellos aciertan. Cabe destacar que algunos modelos tienen peores prediciones que otros, como es el caso del tercero. También calculamos la suma de todos los elementos del vector de prediciones y observamos que es 1 en todos los casos (Esto se debe a que estamos trabajando con probabilidades)"
       ]
     },
     {
@@ -2530,7 +2530,7 @@
       "source": [
         "El optimizador adam es una combinación de los dos optimizadores que se han utilizado, el SGD y el RMSprop. Adam adapta cada parámetro individualmente en vez de usar una tasa de aprendizaje común a todos. Por ello, los resultados obtenidos respecto a la perdida y la precisión son claramente mejores (Pasa de un 60% a un 80%).\n",
         "\n",
-        "En cuanto a la función de activación sparse_categorical_crossentropy, se utiliza en problemas de clasificación donde hay instancias relacionadas cada una con una clase. Es una variante de Categorical Crossentropy, se utiliza para pasar las etiquetas a one-hot y calcular a partir de ahí la función de pérdida con Categorical Crossentropy tradicional. Gracias a esta función la entrada de datos al sistema es mejor, se simplifica, y será más eficiente. Gracias a esto, no hace falta entrenar el modelo con las etiquetas ya categoricas, funciona directamente con las etiquetas básicas.\n",
+        "En cuanto a la función de activación sparse_categorical_crossentropy, se utiliza en problemas de clasificación donde hay instancias relacionadas cada una con una clase. Es una variante de Categorical Crossentropy, se utiliza para pasar las etiquetas a one-hot y calcular a partir de ahí la función de pérdida con Categorical Crossentropy tradicional. Gracias a esta función la entrada de datos al sistema es mejor, se simplifica, y será más eficiente. Gracias a esto, no hace falta entrenar el modelo con las etiquetas ya categóricas, funciona directamente con las etiquetas básicas.\n",
         "\n"
       ]
     },
@@ -2549,11 +2549,9 @@
         "id": "dW1Fm9Uu5HBK"
       },
       "source": [
-        "En esta práctica, se ha adquirido experiencia en el desarrollo y entrenamiento de modelos de redes neuronales artificiales para la clasificación de imágenes.\n",
+        "En esta práctica, se ha adquirido experiencia en el desarrollo y entrenamiento de modelos de redes neuronales artificiales para la clasificación de imágenes. A lo largo del proceso, se ha visto que el preprocesamiento de datos desempeña un papel crucial para garantizar que el modelo pueda aprender de manera eficaz. La normalización de imágenes y la transformación de etiquetas en formato one-hot encoding son prácticas muy útiles.\n",
         "\n",
-        "A lo largo del proceso, se ha visto que el preprocesamiento de datos desempeña un papel crucial para garantizar que el modelo pueda aprender de manera eficaz. La normalización de imágenes y la transformación de etiquetas en formato one-hot encoding son prácticas muy útiles.\n",
-        "\n",
-        "Se ha experimentado con diferentes arquitecturas de redes, explorando la elección de funciones de activación y optimizadores, y se ha evaluado el rendimiento de los modelos. Se ha observado que todas estas variables son fundamentales para el rendimiento de los modelos, ya que al probar las distintas convinaciones se han obtenido casos diversos. Por otro lado, se han utilizado maneras gráficas para analizar los resultados y así comprender mejor el comportamiento y las decisiones de la red.\n",
+        "Se ha experimentado con diferentes arquitecturas de redes, explorando la elección de funciones de activación y optimizadores, y se ha evaluado el rendimiento de los modelos. Se ha observado que todas estas variables son fundamentales para el rendimiento de los modelos, ya que al probar las distintas combinaciones se han obtenido casos diversos. Por otro lado, se han utilizado maneras gráficas para analizar los resultados y así comprender mejor el comportamiento y las decisiones de la red.\n",
         "\n",
         "\n",
         "\n",
@@ -2565,10 +2563,6 @@
     "accelerator": "TPU",
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "HCUwka0dz_TH",
-        "pYw_sD4CJVdw"
-      ],
       "include_colab_link": true
     },
     "kernelspec": {
