--- a/EJERCICIOS/2_4_Perceptron_y_Adaline_Ejercicio.ipynb
+++ b/EJERCICIOS/2_4_Perceptron_y_Adaline_Ejercicio.ipynb
@@ -79,6 +79,7 @@
         "        for _ in range(self.n_iter):\n",
         "            errors = 0\n",
         "            for xi, target in zip(X, y):\n",
+        "              # usamos la formula de la actualización de pesos\n",
         "                update = self.eta * (target - self.predict(xi))  ### EJERCICIO 1: CALCULAR LA ACTUALIZACION DE PESOS <<<<<--------------------\n",
         "                self.w_[1:] += update * xi\n",
         "                self.w_[0] += update\n",
@@ -577,6 +578,7 @@
         }
       ],
       "source": [
+        "#creamos un objetvo de tipo Perceptrón\n",
         "ppn = Perceptron(eta=0.1, n_iter=10) ### EJERCICIO 2: CREA UN PERCEPTRON CON TASA DE APRENDIZAJE 0.1 Y 10 ITERACIONES <<<<<--------------------\n",
         "\n",
         "ppn.fit(X, y)\n",
@@ -598,7 +600,7 @@
         "### EJERCICIO 3: EXPLICA LA GRÁFICA ANTERIOR <<<<<--------------------\n",
         "La gráfica representa la cantidad de actualizaciones de pesos (errores) en función del número de épocas de entrenamiento.\n",
         "\n",
-        "Al comienzo del entrenamiento (épocas iniciales), el perceptrón comete errores y realiza actualizaciones de pesos para ajustar sus decisiones.A medida que el perceptrón aprende, los errores disminuyen y la cantidad de actualizaciones de pesos se reduce. El perceptrón ajusta sus pesos para minimizar los errores. Cuando la gráfica alcanza 0 actualizaciones después de cierto número de épocas (época 6), significa que el perceptrón ha convergido y ha encontrado un conjunto de pesos que clasifica correctamente el conjunto de datos. En otras palabras, ha logrado separar linealmente los datos de entrenamiento en dos clases. POr lo tanto podríamos haber usado solo 6 épocas.\n"
+        "Al comienzo del entrenamiento (épocas iniciales), el perceptrón comete errores y realiza actualizaciones de pesos para ajustar sus decisiones.A medida que el perceptrón aprende, los errores disminuyen y la cantidad de actualizaciones de pesos se reduce. El perceptrón ajusta sus pesos para minimizar los errores. Cuando la gráfica alcanza 0 actualizaciones después de cierto número de épocas (época 6), significa que el perceptrón ha convergido y ha encontrado un conjunto de pesos que clasifica correctamente el conjunto de datos. En otras palabras, ha logrado separar linealmente los datos de entrenamiento en dos clases. Por lo tanto, podríamos haber usado solo 6 épocas.\n"
       ]
     },
     {
@@ -700,9 +702,11 @@
       },
       "source": [
         "### EJERCICIO 4: EXPLICA LA GRÁFICA ANTERIOR <<<<<--------------------\n",
-        "Dado que el perceptrón solo converge cuando las dos clases son linealmente separables, se puede comprobar que en este caso sucede. En una región aparece la primera clase (setosa) cuya longitud del pétalo es mayor y en la región de abajo aparece la otra clase (versicolor), cuya longitud del sépalo es la mayor.\n",
+        "La convergencia del perceptrón se da cuando es capaz de separar las dos clases de datos de manera lineal. En otras palabras, puede trazar una línea, o un plano en espacios de dimensiones superiores, que distingue claramente una clase de la otra.\n",
         "\n",
-        "Si el conjunto no fuera linealmente separable, la gráfica no podría llegar a clasificar los datos perfectamente."
+        "En el caso que estamos considerando, se puede observar que las dos clases (setosa y versicolor) están claramente separadas en dos regiones distintas. La clase \"setosa\" tiende a tener pétalos más largos, mientras que la clase \"versicolor\" tiene sépalos más largos. Esta clara distinción permite que el perceptrón ajuste sus pesos y converja hacia una solución donde pueda clasificar perfectamente los datos.\n",
+        "\n",
+        "Sin embargo, si las dos clases estuvieran mezcladas de tal manera que no pudieran separarse mediante una línea recta o un hiperplano, entonces el perceptrón no podría alcanzar una clasificación perfecta. Esto es una limitación del perceptrón y es un recordatorio de que no siempre puede manejar conjuntos de datos complejos que no son linealmente separables.\n"
       ]
     },
     {
@@ -824,6 +828,7 @@
       "source": [
         "fig, ax = plt.subplots(nrows=1, ncols=2, figsize=(10, 4))\n",
         "\n",
+        "#creación del objeto de tipo adaline y llamada al método fit\n",
         "ada1 = AdalineGD(eta=0.01, n_iter=10) ### EJERCICIO 6: Crea y entrena con los datos de entrenamiento y sus etiquetas un Adaline de Gradiente Descendente\n",
         "       ### con 10 iteraciones y una tasa de aprendizaje de 0.01 <<<<<--------------------<<<<<--------------------<<<<<--------------------\n",
         "ada1 = ada1.fit(X,y)\n",
